@@ -1,3 +1,8 @@
+2009-12-01 17:55-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* PBPbxNativeTarget.m: Replace @try/@catch with NS_DURING
+	and NS_HANDLER/ENDHANDLER
+
 2009-11-20 Hans Baier <hansfbaier@goolemail.com>
 	* applied Joe Matiellos patch after some style cleanup
 
